# cooperative-design-optimization

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf.example  package.json  pnpm-lock.yaml  vite.config.ts
analysis/: analyze_session.py  compare_conditions.py  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  bo.py  evaluate.py  mtq.py  nasa_tlx.py  session.py  tasks.py
backend/app/bo/: optimizer.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py
backend/app/llm/: selector.py
backend/app/schemas/: admin.py  auth.py  bo.py  evaluate.py  mtq.py  nasa_tlx.py  session.py
backend/app/tasks/: config.yaml  loader.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CheckResults.css  CheckResults.tsx  Evaluate.css  Evaluate.tsx  MtqSurvey.css  MtqSurvey.tsx  NasaTLX.css  NasaTLX.tsx  SetParameters.css  SetParameters.tsx  WebpagePreview.css  WebpagePreview.tsx
frontend/src/context/: i18nContext.tsx
frontend/src/locales/: en.json  ja.json
frontend/src/pages/: AdminPanel.css  AdminPanel.tsx  Login.css  Login.tsx  SessionSetup.css  SessionSetup.tsx
src/: App.css  App.tsx  types.ts
src/components/: CheckResults.css  CheckResults.tsx  Evaluate.css  Evaluate.tsx  SetParameters.css  SetParameters.tsx  WebpagePreview.css  WebpagePreview.tsx
src/utils/: dummyAI.ts  dummyBO.ts
