[project]
name = "analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "botorch>=0.17.2",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "scipy>=1.13",
    "torch>=2.12.0",
]

[project.scripts]
analyze-session = "analyze_session:main"
